--- a/src/main/resources/static/css/include/footer.css
+++ b/src/main/resources/static/css/include/footer.css
@@ -15,6 +15,8 @@
     border-bottom: 1px solid #e9e9e9;
     box-sizing: border-box;
     text-align: center;
+    font-family: 'Helvetica Neue', Arial, sans-serif; /* 세련된 폰트 */
+    font-size: 14px;
 }
 
 .footer__link {
