--- a/src/main/resources/templates/product/view.html
+++ b/src/main/resources/templates/product/view.html
@@ -234,15 +234,15 @@
             <aside class="cart-summary">
                 <div class="bottom_cart">
                     <div class="cart-option">
-                        <label for="optionSelect1">상품명</label>
-                        <label for="optionSelect1">[[${product.productName}]]</label>
+                        <label>상품명</label>
+                        <label>[[${product.productName}]]</label>
 
-                        <label for="optionSelect2">선택옵션</label>
+                        <label>선택옵션</label>
                         <div class="selectedOption">
                             <th:block th:each="ProductOption, i:${product.getProductOptions()}">
                                 <div class="options_choose">
                                     <label for="optionSelect[[${i}]]">[[${ProductOption.name}]]:</label>
-                                    <select id="optionSelect[[${i}]]" onchange="updateSelectedOptions()">
+                                    <select onchange="updateSelectedOptions()">
                                         <option value="">옵션을 선택하세요</option>
                                         <th:block th:each="optionitem : ${ProductOption.getOptionitems()}">
                                             <option th:value="${optionitem.id}">[[${optionitem.value}]]</option>
