--- a/src/main/resources/templates/layout/modal.html
+++ b/src/main/resources/templates/layout/modal.html
@@ -358,7 +358,7 @@
                 </article>
                 <br>
                 <div class="modalbuttondiv">
-                    <input class="modalbutton" onclick="submitRefundRequest()" type="submit" value="반품신청"/>
+                    <input class="modalbutton" onclick="submitRefundRequest(event)" type="submit" value="반품신청"/>
                     <button class="modalcanclebutton">취소</button>
                 </div>
             </form>
